--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,21 @@
-$old-rose: #B98B82;
-$tangerine: #F18F01;
-$copper-penny: #B76D68;
-$oxford-blue: #0A014F;
-$melon: #F3B3A6;
+$old-rose: #b98b82;
+$tangerine: #ea7474;
+$copper-penny: #b76d68;
+$oxford-blue: #0a014f;
+$melon: #f3b3a6;
+
+$noteColors: #017fba, #ffc914, #e4572e, #9e0031, #5f0f40;
+
+@for $i from 1 through length($noteColors) {
+  li:nth-child(#{length($noteColors)}n + #{$i}) {
+    color: nth($noteColors, $i);
+  }
+}
 
 %clearfix {
-  &::after, &::before {
-    content: '';
+  &::after,
+  &::before {
+    content: "";
     display: block;
     clear: both;
   }
@@ -16,10 +25,10 @@ $melon: #F3B3A6;
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
 }
-body{
-  background-color: #F2E0DC;
+body {
+  background-color: #fff;
 }
 .container {
   width: 100%;
@@ -35,7 +44,25 @@ body{
 footer {
   @extend %top-bottom;
   .copyrights {
-    margin: 25px;
+    margin: 1em;
+    p {
+      display: inline;
+    }
+    a {
+      color: #d23ca1;
+    }
+    .questionMark {
+      background: #fff;
+      width: 1.2em;
+      height: 1.2em;
+      border-radius: 50%;
+      text-align: center;
+      display: inline-block;
+      margin-left: 0.5em;
+    }
+    span.visible {
+      display: none;
+    }
   }
 }
 header {
@@ -44,9 +71,27 @@ header {
   h1 {
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 220%;
+    font-size: 230%;
+  }
+  .toDo {
+    width: 30%;
+    height: 3em;
+    margin: 1em auto 0;
+    background: #fff;
+    box-shadow: 2px 2px 2px $tangerine;
+    border-radius: 3em;
+    @media only screen and (max-width: 1000px) {
+      width: 50%;
+    }
+    @media only screen and (max-width: 600px) {
+      width: 90%;
+    }
+    p {
+      line-height: 3em;
+    }
   }
 }
+
 .hero {
   width: 25%;
   float: left;
@@ -60,7 +105,7 @@ header {
     }
   }
   &.selected {
-    background-color: $copper-penny;
+    background-color: $oxford-blue;
   }
 }
 .keybordClass {
@@ -74,7 +119,126 @@ header {
   border-bottom-right-radius: 5%;
   margin: 30px 0;
   @extend %clearfix;
-  &:hover{
+  &:hover {
     background-color: $oxford-blue;
   }
+}
+
+@keyframes pulse {
+  0% {
+    top: 20%;
+  }
+  100% {
+    top: 33%;
+  }
+}
+
+.pianoImg {
+  display: block;
+  width: 100%;
+  position: relative;
+  top: 33%;
+  &:hover {
+    animation-name: pulse;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+  }
+}
+.staff {
+  width: 100%;
+  height: 11em;
+  position: relative;
+  ul {
+    list-style: none;
+    li {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+}
+.melodyBox {
+  position: absolute;
+  width: 10%;
+  height: 17%;
+  background: $copper-penny;
+  margin-top: 2em;
+  border: 2px solid $tangerine;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+
+  &.beats_0 {
+    left: 24%;
+  }
+  &.beats_1 {
+    left: 45%;
+  }
+  &.beats_2 {
+    left: 66%;
+  }
+  @media only screen and (min-width: 1200px) {
+    width: 5%;
+    &.beats_0 {
+      left: 30%;
+    }
+    &.beats_1 {
+      left: 47.5%;
+    }
+    &.beats_2 {
+      left: 65%;
+    }
+  }
+
+  button {
+    width: 60%;
+    height: 30%;
+    display: block;
+    margin: 0 auto;
+    font-size: 1em;
+    border-radius: 30%;
+  }
+  select {
+    width: 60%;
+    margin: 0.5em auto;
+    display: block;
+    height: 25%;
+    font-size: 1em;
+    color: $oxford-blue;
+  }
+}
+@keyframes float {
+  0% {
+    left: 0;
+    top: 0;
+    opacity: 0;
+  }
+  25% {
+    left: 25%;
+    top: 3em;
+    opacity: 1;
+  }
+  50% {
+    left: 50%;
+    top: 0;
+    opacity: 1;
+  }
+  75% {
+    left: 75%;
+    top: 3em;
+    opacity: 1;
+  }
+
+  100% {
+    left: 98%;
+    top: 0;
+    opacity: 0;
+  }
+}
+.animate {
+  font-size: 3em;
+  position: relative;
+  animation-name: float;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
